# RaspiZeroW

./: README.md  setup  setup.save
Setup/: startup.sh
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/lib/pkgconfig/: testing_software.pc
catkin_ws/devel/share/testing_software/cmake/: testing_softwareConfig.cmake
catkin_ws/src/testing_software/: CMakeLists.txt  package.xml
catkin_ws/src/testing_software/scripts/: picam_getrawdata  picam_vidstream
catkin_ws/src/testing_software/src/: picam_getrawdata  picam_getrawdata.cpp
cmake_tutorials/: .gitignore  CMakeLists.txt  main  tutorial_notes.txt
cmake_tutorials/src/: main.cpp
